<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main1.MainActivity">

    <data>

        <variable
            name="viewModel"
            type="com.okdap.razorpaydemo.ui.main1.MainViewModel" />

        <variable
            name="imageUrl"
            type="String" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            app:setImageUrl="@{imageUrl}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtName"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/name" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlName"
            style="@style/Input_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/enter_your_name"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/etName"
                style="@style/Edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:text="@={viewModel.name}"
                tools:text="Amit" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPhone"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_phone" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPhone"
            style="@style/Input_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/enter_your_phone_no"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/etPhone"
                style="@style/Edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_phone_no"
                android:inputType="number"
                android:maxLength="25"
                android:text="@={viewModel.phoneNumber}"
                tools:text="8872451846 " />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCity"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_city" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlCity"
            style="@style/Input_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/enter_your_city"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/etCity"
                style="@style/Edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_city"
                android:inputType="text"
                android:text="@={viewModel.city}" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/purple_500"
            android:onClick="@{() -> viewModel.validation()}"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>